; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_lock.c_svn_fs_x__allow_locked_operation.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_lock.c_svn_fs_x__allow_locked_operation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@get_locks_callback = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_x__allow_locked_operation(i8* %0, %struct.TYPE_7__* %1, i64 %2, i64 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = call i8* @svn_fs__canonicalize_abspath(i8* %13, i32* %14)
  store i8* %15, i8** %6, align 8
  %16 = load i64, i64* %8, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %34

18:                                               ; preds = %5
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @digest_path_from_path(i8** %11, i32 %21, i8* %22, i32* %23)
  %25 = call i32 @SVN_ERR(i32 %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %27 = load i8*, i8** %11, align 8
  %28 = load i32, i32* @get_locks_callback, align 4
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %30 = load i64, i64* %9, align 8
  %31 = load i32*, i32** %10, align 8
  %32 = call i32 @walk_locks(%struct.TYPE_7__* %26, i8* %27, i32 %28, %struct.TYPE_7__* %29, i64 %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  br label %49

34:                                               ; preds = %5
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = load i64, i64* %9, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = call i32 @get_lock_helper(%struct.TYPE_7__* %35, i32** %12, i8* %36, i64 %37, i32* %38)
  %40 = call i32 @SVN_ERR(i32 %39)
  %41 = load i32*, i32** %12, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %43, label %48

43:                                               ; preds = %34
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %45 = load i32*, i32** %12, align 8
  %46 = call i32 @verify_lock(%struct.TYPE_7__* %44, i32* %45)
  %47 = call i32 @SVN_ERR(i32 %46)
  br label %48

48:                                               ; preds = %43, %34
  br label %49

49:                                               ; preds = %48, %18
  %50 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %50
}

declare dso_local i8* @svn_fs__canonicalize_abspath(i8*, i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @digest_path_from_path(i8**, i32, i8*, i32*) #1

declare dso_local i32 @walk_locks(%struct.TYPE_7__*, i8*, i32, %struct.TYPE_7__*, i64, i32*) #1

declare dso_local i32 @get_lock_helper(%struct.TYPE_7__*, i32**, i8*, i64, i32*) #1

declare dso_local i32 @verify_lock(%struct.TYPE_7__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
